<resources>
    <string name="app_name">CryptoSync2</string>
    <!-- Strings Nav-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Strings-->
    <string name="app_name1">HelloAndroidWithLoginAndRegistration</string>
    <string name="email_string">Email</string>
    <string name="username_string">UserName</string>
    <string name="password_string">Password</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="log_reg_string">Login/Register</string>


    <string name="hello">Hello Android!</string>

    <!-- sandbox -->
    <string name="reg_string">Registrato, if you will</string>

    <!-- map string from contacts-->
    <string name="find_address_string">"Find Address"</string>
    <string name="map_contacts_app">"Map Contacts App"</string>

    <!-- map location -->
    <string name="show_map_string">Show Map</string>
    <string name="location_string">Enter Location</string>
    <string name="map_app">"Map App"</string>

    <string name="fuzz">"--------fuzzzzz--- :-)"</string>

    <!-- main content -->
    <string name="main_intro">"Greetings to CryptoSync where we are going to learn how to synchronise with the Ethereum or Ethereum Classic Blockchain.
        \nThe main point is that you will understand and visualise the blockchain in real-time and understand the technology behind Ethereum and Bitcoin.
        \nTake a look at the navigation bar as it has the main links and just use the hamburger bar from the top left."
    </string>
    <string name="Import">Import from Camera</string>
    <string name="Gallery">Gallery Pix</string>
    <string name="RegLogin">Register || Login</string>
    <string name="Tools">Toolbox / Settings</string>
    <string name="Linux">Linux</string>
    <string name="Windows">Windows</string>
    <string name="Apple">Apple</string>
    <string name="EthereumApi">Etherscan.io API</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="Form1">Form1</string>
    <string name="Form2">Form2</string>
    <string name="gaeilge">Gaeilge</string>
    <string name="tamil">Tamil</string>
    <string name="contacts">Contact</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="german">German</string>

    <string name="action_main">Home Page</string>

    <!-- Camera2Basic-->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_ethereum_main">EthereumMain</string>

    <!-- Ethereum API-->
    <string name="load_data_string">Load Etherscan.io API Call Data</string>
    <string name="map_app1">MapApp1</string>
    <string name="map_app2">MapApp2</string>
    <string name="FirebaseRegLogin">Firebase Register &amp; Login</string>
    <string name="title_activity_linux_etherum_bottom_nav">LinuxEtherumBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_linux_ethereum_tabbed">LinuxEthereumTabbed</string>
    <string name="section_format">CryptoSync  -  section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login_google">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="RegLoginGoogle">Login / Register G+</string>


</resources>
