<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_string" >
    </TextView>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_hint" 
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_string" >
    </TextView>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint" 
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/login_string" >
    </Button>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/register_string" >
    </Button>


    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_string"
        android:textColor="@color/blue"
        android:textColorHighlight="@color/fuchsia" />

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_app" />

    <Button
        android:id="@+id/mapbtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_contacts_app" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button added" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_weight="0.35" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fuchsia"
        android:capitalize="none"
        android:checked="false"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="@color/blue"
        android:textColorHighlight="@color/black"
        android:textOff="@string/reg_string"
        android:textOn="@string/app_name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_launcher"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPersonName"
        android:text="" />


</LinearLayout>