<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/reg_string"
    android:textSize="40sp" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_string" >
    </TextView>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_hint"
        android:inputType="text">
    </EditText>

</LinearLayout>
